# real-time-web-chat

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: default.conf
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 0d4fc7c66ff8_initial_migration.py  4574bb088606_init.py  4d688a3702f2_add_users.py  6ec4fa613d59_.py  7493442c4a64_added_chats.py  89616afcfd15_add_users.py  c133bca909f6_.py
src/api/: auth.py  chat.py  connectionManager.py
src/bot/: bot.py  celery_app.py
src/db/: config.py  crud.py  db.py  models.py  services.py
templates/: app.html  app.js  enter.html
